--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,7 +1,15 @@
 .card {
-  border: solid 1px white;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 10px;
-  background: #8d4d04;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card img {
+  max-height: 200px;
+  object-fit: cover;
+}
+
+.card-body {
+  text-align: center;
 }
