--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,36 @@
-#root {
-  max-width: 100%;
-  width: 70%;
-  margin: auto auto;
-  text-align: center;
-  background-color: rgb(255, 255, 255);
-  border-color: #c71c1c;
-  border-radius: 0.5px;
-  overflow: visible;
+/* Asegúrate de que el body y el html ocupen toda la altura de la pantalla */
+
+body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+/* Estilo para el contenedor #root */
+#root {
+  max-width: 100%;
+  width: 100%;
+  height: 100%; /* Asegura que el contenedor ocupe toda la altura */
+  text-align: center;
+  background-color: rgb(206, 229, 238);
+  border-color: #ecf0ef;
+  border-radius: 0.5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0;
+}
+
+/* Estilo para el contenido de la aplicación */
+.app {
+  width: 80%;
+  height: 100%;
+  background: #f0eeee;
+}
+
+/* Estilos adicionales */
 .active {
   color: red;
 }
