--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #003366;
+  background-color: #00661f;
   top: 0;
   width: 100%;
   z-index: 1000; /* Asegura que el navbar se mantenga en el frente */
