Cambia index.html y /src a  /public para implementar mercado pago

--- a/public/src/styles/NavBar.css
+++ b/public/src/styles/NavBar.css
@@ -23,12 +23,12 @@
 }
 
 .nav-link:hover {
-  background-color: #00509e;
+  background-color: rgb(30, 122, 76);
   color: #ffffff;
 }
 
 .nav-link.active {
-  background-color: #00509e;
+  background-color: rgb(30, 122, 76);
   color: #003366;
 }
 
