--- a/public/src/App.css
+++ b/public/src/App.css
@@ -1,21 +1,19 @@
 /* Estilo para el contenedor #root */
-
 #root {
   max-width: 100%;
   width: 100%;
-  height: 100%; /* Asegura que el contenedor ocupe toda la altura */
-  text-align: center;
-  border-color: #ecf0ef;
-  border-radius: 0.5px;
+  min-height: 100vh; /* Usa min-height en lugar de height */
   display: flex;
-  justify-content: center;
+  flex-direction: column; /* Cambia a columna para un mejor flujo */
   align-items: center;
-  margin-top: 0px;
+  margin-top: 0;
+  padding: 0;
 }
-/* Estilo para el contenido de la aplicación */
+
 .app {
-  width: 80%;
-  height: 100%;
+  width: 100%; /* Cambia a 100% */
+  max-width: 1200px; /* Opcional: establece un ancho máximo */
+  padding: 0 15px; /* Añade padding para evitar que el contenido toque los bordes */
 }
 
 /* Estilos adicionales */
