--- a/public/src/styles/carousel.css
+++ b/public/src/styles/carousel.css
@@ -1,8 +1,8 @@
 .carousel {
-  margin: 80px auto; /* Centra horizontalmente y ajusta el margen superior */
+  margin: 80px auto;
   background-color: #d6c314;
   width: 70%;
-  position: absolute; /* Cambia a relativo para evitar problemas con fixed */
+  position: relative; /* Cambia a relativo */
   overflow: visible;
   z-index: 1;
 }
