--- a/public/src/styles/NavBar.css
+++ b/public/src/styles/NavBar.css
@@ -1,15 +1,16 @@
 .navbar {
-  background-color: #00661f;
+  background-color: rgba(0, 102, 31, 0.8); /* Color verde con transparencia */
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 1000;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para darle profundidad */
 }
 
 /* Añade un margen superior al contenido principal para compensar la altura del navbar */
 .app {
-  margin-top: 60px; /* Ajusta según la altura de tu navbar */
+  margin-top: 1px; /* Ajusta según la altura de tu navbar */
 }
 
 .navbar-brand {
@@ -30,13 +31,23 @@
 }
 
 .nav-link:hover {
-  background-color: rgb(30, 122, 76);
+  background-color: rgba(
+    30,
+    122,
+    76,
+    0.8
+  ); /* Fondo con transparencia al hacer hover */
   border-radius: 10%;
   color: #ffffff;
 }
 
 .nav-link.active {
-  background-color: rgb(30, 122, 76);
+  background-color: rgba(
+    30,
+    122,
+    76,
+    0.8
+  ); /* Fondo con transparencia para el enlace activo */
   color: #003366;
   border-radius: 10%;
 }
