--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -65,3 +65,10 @@
     margin: 10px auto;
   }
 }
+.cartItemCount {
+  background-color: red;
+  border-radius: 50%;
+  padding: 5px;
+  font-size: 12px;
+  font-weight: bolder;
+}
