--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -93,3 +93,8 @@
 .cart a button:hover {
   background-color: #27ae60;
 }
+
+.buyButton {
+  background-color: rgb(0, 136, 255);
+  width: 300px;
+}
